Using enum for Event Types, support for localization of this enum

--- a/app/src/main/res/layout/activity_test_rest_api.xml
+++ b/app/src/main/res/layout/activity_test_rest_api.xml
@@ -112,12 +112,14 @@
             android:onClick="postEventClicked"
             android:text="Post event" />
 
-        <EditText
-            android:id="@+id/et"
+
+
+        <Spinner
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Event Type"
-            android:inputType="text" />
+            android:id="@+id/et">
+
+        </Spinner>
 
         <EditText
             android:id="@+id/desc"
