--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
 
     <color name="splash_light">#646464</color>
     <color name="splash_dark">#1a1a1a</color>
+
+    <color name="black_transparent">#20000000</color>
 </resources>
