--- a/app/src/main/res/layout/fragment_eventdetail_list.xml
+++ b/app/src/main/res/layout/fragment_eventdetail_list.xml
@@ -2,7 +2,7 @@
 <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/list"
+    android:id="@+id/eventDetailRecyclerView"
     android:name="com.moscowmuleaddicted.neighborhoodsecurity.EventDetailList"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,5 +10,5 @@
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     app:layoutManager="LinearLayoutManager"
-    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.EventDetailListFragment"
+    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EventDetailListFragment"
     tools:listitem="@layout/fragment_eventdetail" />
