--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -1,148 +1,245 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:ls="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="match_parent"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    android:orientation="vertical"
-    tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EventCreateFragment">
+    android:layout_width="match_parent"
+    >
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:ls="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical"
+        tools:context="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EventCreateFragment">
 
-        <ImageView
-            android:id="@+id/descriptionIcon"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:src="@drawable/comment_alert_outline" />
+            android:orientation="horizontal">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_description"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/descriptionIcon">
+            <ImageView
+                android:id="@+id/descriptionIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingRight="8dp"
+                android:src="@drawable/comment_alert_outline" />
 
-            <EditText
-                android:id="@+id/input_description"
+            <android.support.design.widget.TextInputLayout
+                android:id="@+id/input_layout_description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_description" />
+                android:layout_toRightOf="@id/descriptionIcon">
 
-        </android.support.design.widget.TextInputLayout>
+                <EditText
+                    android:id="@+id/input_description"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/hint_description" />
 
-    </RelativeLayout>
+            </android.support.design.widget.TextInputLayout>
+
+        </RelativeLayout>
 
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/eventTypeIcon"
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:src="@drawable/alert_outline" />
+            android:orientation="horizontal">
 
-        <com.satsuware.usefulviews.LabelledSpinner
-            android:id="@+id/labelled_spinner_event_type"
-            android:layout_toRightOf="@id/eventTypeIcon"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            ls:labelText="@string/hint_event_type"
-            ls:widgetColor="@color/colorAccent" />
+            <ImageView
+                android:id="@+id/eventTypeIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingRight="8dp"
+                android:src="@drawable/alert_outline" />
 
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/countryIcon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:src="@drawable/ic_map" />
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_country"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/countryIcon"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/input_country"
+            <com.satsuware.usefulviews.LabelledSpinner
+                android:id="@+id/labelled_spinner_event_type"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_country" />
+                android:layout_toRightOf="@id/eventTypeIcon"
+                ls:labelText="@string/hint_event_type"
+                ls:widgetColor="@color/colorAccent" />
 
-        </android.support.design.widget.TextInputLayout>
-    </RelativeLayout>
+        </RelativeLayout>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/cityIcon"
+        <RadioGroup
+            android:id="@+id/radioGroupEventCreate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:src="@drawable/ic_location_city" />
+            android:layout_gravity="center"
+            android:layout_marginLeft="16dp"
+            android:layout_marginRight="16dp"
+            android:orientation="horizontal">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_city"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/cityIcon"
-            android:layout_height="wrap_content">
-
-            <EditText
-                android:id="@+id/input_city"
-                android:layout_width="match_parent"
+            <RadioButton
+                android:id="@+id/radioAddress"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_city" />
+                android:layout_weight="1"
+                android:paddingRight="8dp"
+                android:text="@string/radio_address" />
 
-        </android.support.design.widget.TextInputLayout>
-    </RelativeLayout>
+            <RadioButton
+                android:id="@+id/radioCoordinates"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:paddingLeft="8dp"
+                android:text="@string/radio_coordinates" />
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        </RadioGroup>
 
-        <ImageView
-            android:id="@+id/streetIcon"
+
+        <LinearLayout
+            android:id="@+id/layout_address_group"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:paddingRight="8dp"
-            android:src="@drawable/ic_domain" />
+            android:orientation="vertical">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/input_layout_street"
-            android:layout_width="match_parent"
-            android:layout_toRightOf="@id/streetIcon"
-            android:layout_height="wrap_content">
 
-            <EditText
-                android:id="@+id/input_street"
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/countryIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:paddingRight="8dp"
+                    android:src="@drawable/ic_map" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_country"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/countryIcon">
+
+                    <EditText
+                        android:id="@+id/input_country"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_country" />
+
+                </android.support.design.widget.TextInputLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/cityIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:paddingRight="8dp"
+                    android:src="@drawable/ic_location_city" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_city"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/cityIcon">
+
+                    <EditText
+                        android:id="@+id/input_city"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_city" />
+
+                </android.support.design.widget.TextInputLayout>
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/streetIcon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
+                    android:paddingRight="8dp"
+                    android:src="@drawable/ic_domain" />
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_street"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/streetIcon">
+
+                    <EditText
+                        android:id="@+id/input_street"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_street" />
+
+                </android.support.design.widget.TextInputLayout>
+            </RelativeLayout>
+        </LinearLayout>
+
+        <RelativeLayout
+            android:id="@+id/layout_coordinates_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <ImageView
+                android:id="@+id/coordsIcon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:paddingRight="8dp"
+                android:src="@drawable/ic_map" />
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="@string/hint_street" />
+                android:layout_toRightOf="@id/coordsIcon"
+                android:orientation="horizontal">
 
-        </android.support.design.widget.TextInputLayout>
-    </RelativeLayout>
-</LinearLayout>
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_latitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/input_latitude"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_latitude"
+                        android:inputType="numberDecimal" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:id="@+id/input_layout_longitude"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1">
+
+                    <EditText
+                        android:id="@+id/input_longitude"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="@string/hint_longitude"
+                        android:inputType="numberDecimal" />
+
+                </android.support.design.widget.TextInputLayout>
+
+
+            </LinearLayout>
+
+
+        </RelativeLayout>
+    </LinearLayout>
+</ScrollView>
