--- a/app/src/main/res/layout/activity_event_create.xml
+++ b/app/src/main/res/layout/activity_event_create.xml
@@ -4,7 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     tools:context="com.moscowmuleaddicted.neighborhoodsecurity.activity.EventCreateActivity">
+
+    <!--<android.support.v7.widget.Toolbar-->
+        <!--android:id="@+id/event_create_toolbar"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="?attr/actionBarSize"-->
+        <!--android:background="?attr/colorPrimary"-->
+        <!--android:elevation="4dp"-->
+        <!--android:theme="@style/ThemeOverlay.AppCompat.ActionBar"-->
+        <!--app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>-->
 
     <fragment
         android:name="com.moscowmuleaddicted.neighborhoodsecurity.fragment.EventCreateFragment"
