Working login via email / facebook / google

--- a/app/src/main/res/layout/fragment_email_password.xml
+++ b/app/src/main/res/layout/fragment_email_password.xml
@@ -92,7 +92,6 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/signin"
-            android:onClick="signInClicked"
             style="?attr/buttonBarButtonStyle"/>
 
         <Button
@@ -101,7 +100,6 @@
             android:layout_height="match_parent"
             android:text="@string/signup"
             android:visibility="gone"
-            android:onClick="signUpClicked"
             style="?attr/buttonBarButtonStyle"/>
 
         <Button
@@ -110,7 +108,6 @@
             android:layout_height="match_parent"
             android:text="@string/reset_password"
             android:visibility="gone"
-            android:onClick="resetPasswordClicked"
             style="?attr/buttonBarButtonStyle"/>
     </LinearLayout>
 
@@ -128,15 +125,13 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/forgot_password"
-            android:gravity="center_horizontal"
-            android:onClick="changeLayoutForgotPassword"/>
+            android:gravity="center_horizontal"/>
         <TextView
             android:id="@+id/ep_register"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/register_now"
-            android:gravity="center_horizontal"
-            android:onClick="changeLayoutRegister"/>
+            android:gravity="center_horizontal"/>
 
 
     </LinearLayout>
