Date format, rounded votes

--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -4,15 +4,44 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:weightSum="5">
-
-    <ImageView
-        android:id="@+id/event_icon"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+    <RelativeLayout
+        android:orientation="vertical"
         android:layout_width="0dp"
         android:layout_height="fill_parent"
-        android:layout_weight="1"
-        android:src="@drawable/ic_robbery"/>
+        android:layout_weight="1">
+
+        
+        <ImageView
+            android:id="@+id/event_icon"
+            android:layout_margin="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:src="@drawable/ic_robbery"/>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_below="@id/event_icon"
+            android:layout_marginTop="-15dp"
+            android:background="@drawable/rounded_edges">
+
+            <TextView
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:id="@+id/event_votes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/white"
+                android:text="99+" />
+
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
 
     <RelativeLayout
         android:layout_width="0dp"
@@ -46,14 +75,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
 
-        <TextView
-            android:id="@+id/event_votes"
-            android:layout_marginRight="8dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_below="@id/event_date"
-            android:text="0 voti" />
 
     </RelativeLayout>
 
