--- a/app/src/main/res/layout/fragment_event.xml
+++ b/app/src/main/res/layout/fragment_event.xml
@@ -39,6 +39,11 @@
 
         </LinearLayout>
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/grey_300" />
 
     </RelativeLayout>
 
@@ -49,31 +54,37 @@
         android:layout_weight="4">
 
         <TextView
-            android:layout_alignParentTop="true"
             android:id="@+id/event_type"
-            android:text="ROBBERY"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
             android:layout_margin="8dp"
+            android:text="ROBBERY"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
-            android:layout_below="@id/event_type"
-            android:text="Via Roma, Guanzate"
             android:id="@+id/event_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_below="@id/event_type"
             android:layout_margin="8dp"
+            android:text="Via Roma, Guanzate"
             android:textAppearance="?attr/textAppearanceListItem" />
 
         <TextView
             android:id="@+id/event_date"
-            android:layout_margin="8dp"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentRight="true"
-            android:text="12/05/2017"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:layout_margin="8dp"
+            android:text="12/05/2017" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_alignParentBottom="true"
+            android:background="@color/grey_300" />
 
 
     </RelativeLayout>
