--- a/app/src/main/res/layout/fragment_event_create.xml
+++ b/app/src/main/res/layout/fragment_event_create.xml
@@ -100,12 +100,7 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <fragment
-                android:id="@+id/place_autocomplete_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
-                />
+
 
             <RelativeLayout
                 android:layout_width="wrap_content"
@@ -120,75 +115,13 @@
                     android:paddingRight="8dp"
                     android:src="@drawable/ic_map" />
 
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/input_layout_country"
+                <fragment
+                    android:id="@+id/place_autocomplete_fragment"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/countryIcon">
-
-                    <EditText
-                        android:id="@+id/input_country"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_country" />
-
-                </android.support.design.widget.TextInputLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/cityIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:paddingRight="8dp"
-                    android:src="@drawable/ic_location_city" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/input_layout_city"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/cityIcon">
-
-                    <EditText
-                        android:id="@+id/input_city"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_city" />
-
-                </android.support.design.widget.TextInputLayout>
-            </RelativeLayout>
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <ImageView
-                    android:id="@+id/streetIcon"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:paddingRight="8dp"
-                    android:src="@drawable/ic_domain" />
-
-                <android.support.design.widget.TextInputLayout
-                    android:id="@+id/input_layout_street"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_toRightOf="@id/streetIcon">
-
-                    <EditText
-                        android:id="@+id/input_street"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:hint="@string/hint_street" />
-
-                </android.support.design.widget.TextInputLayout>
+                    android:layout_toRightOf="@id/countryIcon"
+                    android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
+                    />
             </RelativeLayout>
         </LinearLayout>
 
