--- a/app/src/main/res/layout/fragment_subscription_create.xml
+++ b/app/src/main/res/layout/fragment_subscription_create.xml
@@ -122,75 +122,13 @@
                 android:paddingRight="8dp"
                 android:src="@drawable/ic_map" />
 
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_country"
+            <fragment
+                android:id="@+id/place_autocomplete_fragment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/icon_country">
-
-                <EditText
-                    android:id="@+id/input_country"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_country" />
-
-            </android.support.design.widget.TextInputLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/icon_city"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:paddingRight="8dp"
-                android:src="@drawable/ic_location_city" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_city"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/icon_city">
-
-                <EditText
-                    android:id="@+id/input_city"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_city" />
-
-            </android.support.design.widget.TextInputLayout>
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:id="@+id/icon_street"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:paddingRight="8dp"
-                android:src="@drawable/ic_domain" />
-
-            <android.support.design.widget.TextInputLayout
-                android:id="@+id/input_layout_street"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toRightOf="@id/icon_street">
-
-                <EditText
-                    android:id="@+id/input_street"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/hint_street" />
-
-            </android.support.design.widget.TextInputLayout>
+                android:layout_toRightOf="@id/icon_country"
+                android:name="com.google.android.gms.location.places.ui.SupportPlaceAutocompleteFragment"
+                />
         </RelativeLayout>
     </LinearLayout>
 
