--- a/app/src/main/res/layout/activity_subscription_list.xml
+++ b/app/src/main/res/layout/activity_subscription_list.xml
@@ -1,49 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:fab="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.moscowmuleaddicted.neighborhoodsecurity.activity.SubscriptionListActivity">
 
 
-    <FrameLayout
-        android:id="@+id/subscription_list_fragment"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh_subscription_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></FrameLayout>
+        android:layout_height="match_parent">
 
-    
+        <FrameLayout
+            android:id="@+id/subscription_list_fragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"></FrameLayout>
+    </android.support.v4.widget.SwipeRefreshLayout>
+
     <com.scalified.fab.ActionButton
         android:id="@+id/subscription_create_fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="@dimen/fab_margin"
         android:layout_marginBottom="@dimen/fab_margin"
-        fab:type="DEFAULT"
-        fab:button_color="@color/colorAccent"
+        android:layout_marginRight="@dimen/fab_margin"
         app:button_colorPressed="@color/colorAccent"
+        app:layout_anchor="@id/subscription_list_fragment"
+        app:layout_anchorGravity="bottom|right|end"
+        fab:button_color="@color/colorAccent"
+        fab:button_colorRipple="@color/colorAccentDark"
+        fab:hide_animation="@anim/fab_roll_to_down"
         fab:image="@drawable/fab_plus_icon"
         fab:image_size="24dp"
+        fab:rippleEffect_enabled="true"
+        fab:shadowResponsiveEffect_enabled="false"
         fab:shadow_color="#757575"
         fab:shadow_radius="1.0dp"
         fab:shadow_xOffset="0.5dp"
         fab:shadow_yOffset="1.0dp"
-        fab:button_colorRipple="@color/colorAccentDark"
-        fab:rippleEffect_enabled="true"
-        fab:shadowResponsiveEffect_enabled="false"
+
         fab:show_animation="@anim/fab_roll_from_down"
-        fab:hide_animation="@anim/fab_roll_to_down"
-
-        app:layout_anchor="@id/subscription_list_fragment"
-        app:layout_anchorGravity="bottom|right|end"
-        />
-
-
+        fab:type="DEFAULT" />
 
 
 </android.support.design.widget.CoordinatorLayout>
